--- a/karya2.html
+++ b/karya2.html
@@ -22,104 +22,31 @@
 
   <main style="max-width: 700px; margin: auto; padding: 2rem; line-height: 1.8;">
     <!-- Puisi -->
-    <!-- (Puisi tidak disingkat, langsung tulis ulang seluruh bagian puisi dari file sebelumnya) -->
-    <p>Aku bersalah.<br>
-    Itu tak perlu kau ulang.<br>
-    Dadaku sudah lebih dulu mengakuinya,<br>
-    bahkan sebelum mulutmu melontarkannya.</p>
+    <p>Aku bersalah.<br>Itu tak perlu kau ulang.<br>Dadaku sudah lebih dulu mengakuinya,<br>bahkan sebelum mulutmu melontarkannya.</p>
+    <p>Aku tahu,<br>aku telah mengecewakanmu.<br>Membuat retak di dinding yang kita bangun bersama.<br>Tapi sejak saat itu,<br>aku berusaha mencabut duri duri dari langkahku.<br>Menjahit ulang caraku mencintai, mengiris bagian buruk dari diriku,<br>demi sesuatu yang bisa kau peluk kembali, tanpa ragu.</p>
+    <p>Aku bukan hanya meminta maaf.<br>Aku berusaha berubah. Mati-matian.<br>Sendirian. Dalam diam.<br>Tanpa panggung.</p>
+    <p>Tetapi;<br>mengapa tetap kau lihat aku, dari kesalahanku?<br>Bukan dari usaha yang kubayar dengan air mata dan sepi?<br>Mengapa kesalahanku jadi senjata yang kau simpan?<br>Untuk digunakan setiap kali kau tak ingin melihatku,<br>Menyentuhku, menggenggamku, memelukku?</p>
+    <p>Aku hanya ingin dimengerti, bukan dibenarkan.<br>Dipeluk, bukan dijatuhi dakwaan.</p>
+    <p>Engkau,<br>Menjadi palu yang menghantam dadaku.<br>Bukan atap yang melindungi saat hujan di dalam diriku,<br>Tak tahu lagi ke mana harus mencari teduh.</p>
+    <p>Engkau,<br>Menjadi tangga yang jatuh saat aku terjerembab,<br>Menjadi tanya yang tak kunjung kau jawab,<br>Menjadi jarak yang tak bisa kuukur dengan rindu semata.</p>
+    <p>Dan aku terdiam,<br>Menjadi sunyi yang menampung teriakku sendiri,<br>Menjadi tisu bagi tangisku sendiri,<br>Menjadi rumah yang hangus oleh api,<br>Yang tak pernah kau padamkan.</p>
+    <p>Aku tahu aku bersalah,<br>Tapi bukan berarti aku tak layak untuk dimanusiakan.<br>Bukan berarti aku hanya pantas dimarahi, dihakimi,<br>Dan tak diberi ruang untuk diperbaiki, dikasihi, disayangi.</p>
+    <p>Aku bukan dinding,<br>Yang kau jadikan tempat memukul semua kecewa.<br>Aku pun butuh disentuh, dimaafkan, dihargai,<br>Dan dibaca; laksana puisi yang tak ingin diakhiri.</p>
+    <p>Di luar sana,<br>Satu per satu mimpiku mulai tumbang.<br>Dan setiap kegagalan itu, kian menundukkan punggung dan lututku.<br>Dan ketika aku pulang padamu, bukan untuk meminta solusi,<br>Hanya untuk ditanya: “Kamu baik-baik saja sayang?”, "Tak apa, ada aku disini sayang"<br>"Dunia boleh jahat sama kamu, tapi kamu selalu punya aku, sayang."<br>Tetapi, engkau terdiam.<br>Atau bahkan, menambah luka baru.<br>Seolah-olah aku masih harus membayar kesalahan<br>Yang pernah kulunasi dengan seluruh harga diri.</p>
+    <p>Aku sedang rapuh. Sedang terjatuh.<br>Sedang kehilangan pijakan.<br>Dan saat satu-satunya tempatku pulang,<br>Justru menjadi ruang penghakiman.<br>Aku tak lagi tahu; di mana aku bisa menangis,<br>Tanpa dianggap lemah.</p>
+    <p>Aku mencintaimu.<br>Dengan versi yang belum sempurna,<br>Tapi tak pernah malas untuk belajar.<br>Aku mencintaimu,<br>Dengan dada yang terbuka,<br>Meski kadang disayat kata-kata.</p>
+    <p>Tapi aku bertanya,<br>Bukankah cinta juga butuh empati?<br>Bukankah mencinta bukan sekadar mengingat kesalahan,<br>Tapi juga melihat bagaimana seseorang belajar jadi lebih baik,<br>Meski hancur dalam prosesnya?</p>
+    <p>Aku bukan ingin kamu melupakan salahku,<br>Aku hanya ingin kamu lihat aku kini;<br>Yang lebih lembut dalam menatapmu,<br>Lebih hati-hati dalam bertutur,<br>Lebih sadar bahwa cinta bukan tentang ingin dimenangkan,<br>Tapi saling memeluk walau sama-sama pecah.</p>
 
-    <p>Aku tahu,<br>
-    aku telah mengecewakanmu.<br>
-    Membuat retak di dinding yang kita bangun bersama.<br>
-    Tapi sejak saat itu,<br>
-    aku berusaha mencabut duri duri dari langkahku.<br>
-    Menjahit ulang caraku mencintai, mengiris bagian buruk dari diriku,<br>
-    demi sesuatu yang bisa kau peluk kembali, tanpa ragu.</p>
-
-    <p>Aku bukan hanya meminta maaf.<br>
-    Aku berusaha berubah. Mati matian.<br>
-    Sendirian. Dalam diam.<br>
-    Tanpa panggung.</p>
-
-    <p>Tetapi;<br>
-    mengapa tetap kau lihat aku, dari kesalahanku?<br>
-    Bukan dari usaha yang kubayar dengan air mata dan sepi?<br>
-    Mengapa kesalahanku jadi senjata yang kau simpan?<br>
-    untuk digunakan setiap kali kau tak ingin melihatku,<br>
-    menyentuhku, menggenggamku, memelukku?</p>
-
-    <p>Aku hanya ingin dimengerti, bukan dibenarkan.<br>
-    Dipeluk, bukan dijatuhi dakwaan.</p>
-
-    <p>Engkau,<br>
-    Menjadi palu yang menghantam dadaku.<br>
-    Bukan atap yang melindungi saat hujan di dalam diriku,<br>
-    tak tahu lagi ke mana harus mencari teduh.</p>
-
-    <p>Engkau,<br>
-    menjadi tangga yang jatuh saat aku terjerembab,<br>
-    menjadi tanya yang tak kunjung kau jawab,<br>
-    menjadi jarak yang tak bisa kuukur dengan rindu semata.</p>
-
-    <p>Dan aku terdiam,<br>
-    menjadi sunyi yang menampung teriakku sendiri,<br>
-    menjadi tisu bagi tangisku sendiri,<br>
-    menjadi rumah yang hangus oleh api,<br>
-    yang tak pernah kau padamkan.</p>
-
-    <p>Aku tahu aku bersalah,<br>
-    tapi bukan berarti aku tak layak untuk dimanusiakan.<br>
-    Bukan berarti aku hanya pantas dimarahi, dihakimi,<br>
-    dan tak diberi ruang untuk diperbaiki, dikasihi, disayangi.</p>
-
-    <p>Aku bukan dinding,<br>
-    yang kau jadikan tempat memukul semua kecewa.<br>
-    Aku pun butuh disentuh, dimaafkan, dihargai,<br>
-    dan dibaca; laksana puisi yang tak ingin diakhiri.</p>
-
-    <p>Di luar sana,<br>
-    satu per satu mimpiku mulai tumbang.<br>
-    Dan setiap kegagalan itu, kian menundukkan punggung dan lututku.<br>
-    Dan ketika aku pulang padamu, bukan untuk meminta solusi,<br>
-    hanya untuk ditanya: “Kamu baik baik saja sayang?”, "tak apa, ada aku disini sayang"<br>
-    "Dunia boleh jahat sama kamu, tapi kamu selalu punya aku, sayang."<br>
-    Tetapi, engkau terdiam.<br>
-    Atau bahkan, menambah luka baru.<br>
-    seolah olah aku masih harus membayar kesalahan<br>
-    yang pernah kulunasi dengan seluruh harga diri.</p>
-
-    <p>Aku sedang rapuh. Sedang terjatuh.<br>
-    Sedang kehilangan pijakan.<br>
-    Dan saat satu satunya tempatku pulang,<br>
-    justru menjadi ruang penghakiman.<br>
-    aku tak lagi tahu; di mana aku bisa menangis,<br>
-    tanpa dianggap lemah.</p>
-
-    <p>Aku mencintaimu.<br>
-    Dengan versi yang belum sempurna,<br>
-    tapi tak pernah malas untuk belajar.<br>
-    Aku mencintaimu,<br>
-    dengan dada yang terbuka,<br>
-    meski kadang disayat kata kata.</p>
-
-    <p>Tapi aku bertanya,<br>
-    bukankah cinta juga butuh empati?<br>
-    Bukankah mencinta bukan sekadar mengingat kesalahan,<br>
-    tapi juga melihat bagaimana seseorang belajar jadi lebih baik,<br>
-    meski hancur dalam prosesnya?</p>
-
-    <p>Aku bukan ingin kamu melupakan salahku,<br>
-    aku hanya ingin kamu lihat aku kini;<br>
-    yang lebih lembut dalam menatapmu,<br>
-    lebih hati hati dalam bertutur,<br>
-    lebih sadar bahwa cinta bukan tentang ingin dimenangkan,<br>
-    tapi saling memeluk walau sama sama pecah.</p>
+    <!-- Time Spent -->
+    <p id="time-spent-display" style="margin-top: 2rem; font-style: italic; color: #aaa;"></p>
   </main>
 
+  <!-- Komentar Anonim -->
   <section style="max-width: 700px; margin: 3rem auto; padding: 0 1rem;">
-    <h3 style="margin-bottom: 0.5rem;">Tinggalkan Pesan Anonim</h3>
-    <textarea id="comment-input" rows="4" style="width: 100%; padding: 1rem; border-radius: 10px; border: 1px solid #ccc;" placeholder="Tulis komentarmu di sini..."></textarea>
-    <button onclick="submitComment()" style="margin-top: 0.5rem; padding: 0.5rem 1rem; background-color: #333; color: white; border: none; border-radius: 5px;">Kirim</button>
+    <h3>Leave an Anonymous Message</h3>
+    <textarea id="comment-input" rows="4" style="width: 100%; padding: 1rem; border-radius: 10px; border: 1px solid #ccc;" placeholder="Write your comment here..."></textarea>
+    <button onclick="submitComment()" style="margin-top: 0.5rem; padding: 0.5rem 1rem; background-color: #333; color: white; border: none; border-radius: 5px;">Send</button>
     <ul id="comment-list" style="list-style: none; padding-left: 0; margin-top: 2rem;"></ul>
   </section>
 
@@ -127,6 +54,7 @@
     <p>© 2025 Scriptum Cordis — Written by <em>Lumen Obscura</em></p>
   </footer>
 
+  <!-- Music -->
   <audio id="player" autoplay hidden></audio>
   <div id="music-controls">
     <button id="toggle-mute">🔊</button>
@@ -134,66 +62,31 @@
   </div>
 
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const playlist = [
-        "take_you_there_x_no_bs.mp3",
-        "love_you_too_much.mp3",
-        "skip_this_part.mp3",
-        "unmistakable.mp3",
-        "i_have_nothing.mp3",
-        "on_my_way.mp3",
-        "rahasia_hati.mp3",
-        "cool_enough_for_you.mp3",
-        "saturn_x_slow_dancing.mp3",
-        "make_you_mine.mp3",
-        "love_me.mp3",
-        "limbo.mp3"
-      ];
+    let startTime = Date.now();
 
-      function shuffle(array) {
-        for (let i = array.length - 1; i > 0; i--) {
-          const j = Math.floor(Math.random() * (i + 1));
-          [array[i], array[j]] = [array[j], array[i]];
-        }
-        return array;
-      }
+    function formatDuration(ms) {
+      const sec = Math.floor(ms / 1000);
+      const min = Math.floor(sec / 60);
+      const hr = Math.floor(min / 60);
+      const s = sec % 60;
+      const m = min % 60;
+      const h = hr;
 
-      const player = document.getElementById("player");
-      const nowPlaying = document.getElementById("now-playing");
-      const toggleMute = document.getElementById("toggle-mute");
+      const hourText = h > 0 ? `${h} hour${h !== 1 ? 's' : ''}` : '';
+      const minuteText = m > 0 ? `${m} minute${m !== 1 ? 's' : ''}` : '';
+      const secondText = `${s} second${s !== 1 ? 's' : ''}`;
 
-      let shuffled = shuffle([...playlist]);
-      let current = 0;
+      if (h > 0) return `${hourText}, ${minuteText}, and ${secondText}`;
+      else if (m > 0) return `${minuteText} and ${secondText}`;
+      return secondText;
+    }
 
-      function formatTrackName(filename) {
-        return filename.replace(".mp3", "").replace(/_/g, " ").replace(/\b\w/g, l => l.toUpperCase());
-      }
-
-      function playNext() {
-        const track = shuffled[current];
-        player.src = track;
-        player.volume = 0.25;
-        nowPlaying.textContent = "Now Playing: " + formatTrackName(track);
-        player.play().catch(err => console.log("Gagal autoplay:", err));
-      }
-
-      player.addEventListener("ended", () => {
-        current = (current + 1) % shuffled.length;
-        playNext();
-      });
-
-      toggleMute.addEventListener("click", () => {
-        player.muted = !player.muted;
-        toggleMute.textContent = player.muted ? "🔇" : "🔊";
-      });
-
-      document.body.addEventListener("click", function firstClick() {
-        player.play().catch(() => {});
-        document.body.removeEventListener("click", firstClick);
-      });
-
-      playNext();
-    });
+    function updateTimeSpent() {
+      const now = Date.now();
+      const duration = now - startTime;
+      document.getElementById("time-spent-display").textContent = `⏱ Thank you, you have been with us for ${formatDuration(duration)}.`;
+    }
+    setInterval(updateTimeSpent, 1000);
   </script>
 
   <script type="module">
@@ -214,25 +107,16 @@
     const db = getDatabase(app);
     const commentsRef = ref(db, "comments_karya2");
 
-    function escapeHTML(text) {
-      const div = document.createElement('div');
-      div.textContent = text;
-      return div.innerHTML;
-    }
-
     window.submitComment = function () {
       const comment = document.getElementById("comment-input").value.trim();
-      if (comment === "" || comment.length < 3 || comment.length > 500) return;
-
+      if (comment === "") return;
       const now = new Date();
-      const time = now.toLocaleTimeString('id-ID', { hour12: false });
-      const date = now.toLocaleDateString('id-ID', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
-
+      const time = now.toLocaleTimeString('en-US', { hour12: false });
+      const date = now.toLocaleDateString('en-US', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
       push(commentsRef, {
-        text: escapeHTML(comment),
+        text: comment,
         timestamp: `${time} — ${date}`
       });
-
       document.getElementById("comment-input").value = "";
     };
 
