--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- Komentar Anonim -->
     <section id="comments-section">
-      <h3>Leave a Secret Message</h3>
+      <h3>Leave a Message Anonymously</h3>
       <textarea id="comment-input" placeholder="Write something..." rows="4" style="width: 100%;"></textarea>
       <button onclick="submitComment()">Send</button>
       <div id="comments-display" style="margin-top: 2rem;"></div>
