--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
   <header>
     <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" class="logo-lily" />
-    <h1>Scriptum Cordis, Solum Caelis</h1>
-    <p class="tagline">Ditulis oleh rasa, mengalun pada angkasa, dan menetap dalam pelukan semesta.</p>
+    <h1>Scriptum Cordis,<br>
+        Solum Caelis</h1>
+    <p class="tagline">Ditulis oleh rasa, mengalun pada angkasa,<br>
+      dan menetap dalam pelukan semesta.</p>
   </header>
 
   <nav>
