--- a/karya2.html
+++ b/karya2.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Di Antara Luka yang Tak Bertepuk</title>
+  <title>Di Antara Luka<br>yang Tak Bertepuk</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 120px; display: block; margin: 0 auto 1rem auto;" />
-    <h1>Di Antara Luka yang Tak Bertepuk</h1>
+    <h1>Di Antara Luka<br>yang Tak Bertepuk</h1>
     <p class="tagline">“Yang tak sempat dimengerti.”</p>
     <a href="archive.html" class="button">⟵ Back To Archive</a>
   </header>
